--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,30 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0; }
 
+#page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh; }
+
+h3 {
+  margin-top: 0; }
+
 div.top {
   padding: 1em;
   color: white;
   background: #F44336;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5); }
-  div.top h3 {
-    margin-top: 0; }
 
 div.main-section {
-  padding: 1em; }
+  padding: 1em;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
 
 #thumbnail {
   width: 100%;
@@ -43,3 +57,23 @@ div.main-section {
   #url-input:focus, #url-input:hover {
     outline: none;
     background: #FFF9C4; }
+
+#buttons {
+  display: none; }
+
+#downloading {
+  padding: 1em;
+  color: white;
+  background: #757575; }
+
+#loading-bar {
+  background: rgba(0, 0, 0, 0.5);
+  height: 8px;
+  position: relative; }
+  #loading-bar #bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0%;
+    background: #F44336; }
