--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,6 +77,11 @@ div.main-section {
     display: none;
 }
 
+#open-file {
+    display: none;
+    margin-top: 8px;
+}
+
 #downloading {
     display: none;
     h3 {
